<resources>
    <string name="app_name">助眠app</string>
    <string name="copy_success">复制成功</string>
    <string name="tab_1">首页</string>
    <string name="tab_2">tab_2</string>
    <string name="tab_3">睡眠</string>
    <string name="tab_4">我的</string>

    <string name="meua_1">白噪音</string>
    <string name="meua_2">主播电台</string>
    <string name="meua_3">播放历史</string>
    <string name="meua_4">视频</string>

    <string name="switch_msg">切换到短信登录页面</string>
    <string name="custom_title">自定义标题</string>
    <string name="custom_slogan">自定义Slogan</string>
    <string name="custom_toast">请同意服务条款</string>
    <string name="yzm_login">验证码登录</string>
    <string name="login">登 录</string>
    <string name="login_regis">登录并注册</string>
    <string name="phoneNumber_null">手机号码不能为空</string>
    <string name="phoneNumber_type">请输入正确的号码格式</string>
    <string name="keyCode_null">验证码不能为空</string>
    <string name="password_login">账号密码登录</string>
    <string name="account_login">账号登录</string>
    <string name="pwd_login">密码登录</string>
    <string name="pwd_forget">忘记密码</string>
    <string name="password_register">新用户注册</string>
    <string name="roule">服务条款</string>
    <string name="login_msg">登录注册即表示您同意</string>
    <string name="code_length">请输入8-20位数字或者字母的密码</string>
    <string name="code_same">密码必须一致</string>
    <string name="pwd_reset">重置密码</string>
    <string name="pwd_reset_num">请输入手机号</string>
    <string name="pwd_reset_set">请输入新密码</string>
    <string name="pwd_reset_input">请输入确认密码</string>
    <string name="pwd_reset_ok">确认密码</string>
    <string name="pwd_reset_new">新密码（不少于8位）</string>
    <string name="pwd_reset_sure">确认新密码（不少于8位）</string>
    <string name="pwd_reset_login">确  认</string>
    <string name="pwd_reset_send">验证码已发送至</string>
    <string name="video_more">更多视频</string>
    <string name="good_deream">祝你好梦～</string>
    <string name="good_deream_1">更解你的作息规律</string>
    <string name="good_deream_2">精确记录每日作息时间，及时调整作息规律</string>
    <string name="good_deream_3">睡眠的评分指数</string>
    <string name="good_deream_4">你的睡眠数据将在报告中呈现，Ta也可以对你的睡眠状况有明显的判断。</string>
    <string name="good_deream_5">设置睡眠时间</string>
    <string name="good_deream_6">录制梦话</string>
    <string name="good_deream_7">还没有声音</string>
    <string name="good_deream_8">轻按睡眠界面的“小月亮”按钮，并开启睡眠监测功能，以录制可能影响睡眠质量的声音</string>
    <string name="good_deream_9">记录睡眠</string>
    <string name="good_deream_10">设置叫醒时间</string>
    <string name="good_deream_11">开始休息</string>
    <string name="good_deream_12">更多设置</string>
    <string name="good_deream_13">放松治愈电台</string>
    <string name="good_deream_14">更多</string>
    <string name="good_deream_15">大家都在听</string>
    <string name="good_deream_16">换一换</string>
    <string name="good_deream_17">更多电台</string>
    <string name="good_deream_18">再睡一会儿</string>
    <string name="good_deream_19">分钟</string>
    <string name="good_deream_20">计时结束后将暂停</string>
    <string name="good_deream_21">选择铃声</string>
    <string name="good_deream_22">再睡一会</string>
    <string name="good_deream_23">早上好，该起床啦</string>
    <string name="good_deream_24">休息的怎么样</string>
    <string name="good_deream_25">录制梦话</string>
    <string name="good_deream_26">我知道了</string>
    <string name="good_deream_27">解锁意境权益</string>

    <string name="sleep_tip_1">自定义闹钟铃声</string>
    <string name="sleep_tip_2">睡眠监测</string>
    <string name="sleep_tip_3">屏幕朝下放置时，震动提醒你已经开始记录</string>
    <string name="sleep_tip_4">无痛唤醒</string>
    <string name="sleep_tip_5">音量渐强，以免被突然吓到</string>
    <string name="sleep_tip_6">定时关闭</string>
    <string name="sleep_tip_7">计时结束后将自动停止播放声音</string>
    <string name="sleep_tip_8">再睡会儿</string>
    <string name="sleep_tip_9">懒床一下，自定义懒床时长</string>
    <string name="sleep_tip_10">多久关闭</string>
    <string name="sleep_tip_11">使用</string>
    <string name="sleep_tip_12">请选择铃声</string>
    <string name="sleep_tip_13">闹铃已取消</string>
    <string name="sleep_tip_14">闹钟已关闭</string>
    <string name="sleep_tip_15">分钟后再响铃</string>
    <string name="sleep_tip_16">睡眠评分仅记录就寝时长</string>
    <string name="sleep_tip_17">睡眠时长</string>
    <string name="sleep_tip_18">我喜欢的</string>
    <string name="sleep_tip_19">历史播放</string>
    <string name="sleep_tip_20">帮助与反馈</string>
    <string name="sleep_tip_21">评价意境</string>
    <string name="sleep_tip_22">分享意境</string>
    <string name="sleep_tip_23">版权声明</string>
    <string name="sleep_tip_24">关于意境</string>

    <string name="ok_msg">确定</string>

    <string name="date_1">凌晨好</string>
    <string name="date_2">上午好</string>
    <string name="date_3">中午好</string>
    <string name="date_4">下午好</string>
    <string name="date_5">傍晚好</string>
    <string name="date_6">晚上好</string>
    <string name="date_7">清晨好</string>
    <string name="date_8">早上好</string>


    <string name="msg">已阅读并同意</string>
    <string name="msg_1">用户协议</string>
    <string name="and">和</string>
    <string name="msg_2">隐私政策</string>
    <string name="title">提示</string>
    <string name="content">若需要注册或登录意境app，请先阅读并同意下方相关条款</string>
    <string name="ok">同意并继续</string>
    <string name="login_txt">登录享受更多专属特权</string>
    <string name="other_way">其他登录方式</string>
    <string name="login_way">快捷登录注册</string>
    <string name="number">手机号</string>
    <string name="pwd">密  码</string>
    <string name="intput_pwd">请输入密码</string>
    <string name="code">验证码</string>
    <string name="intput_code">请输入验证码</string>
    <string name="hint_login">请输入您的手机号</string>
    <string name="agree_first">请先同意下方相关协议和政策</string>
    <string name="load_more">已经在更新了，敬请期待哦～</string>
    <string name="load_more_null">没有更多数据了哦～</string>
    <string name="load_more_success">加载完成</string>
    <string name="refresh_finish">刷新完成</string>
    <string name="more_txt_1">免责声明</string>
    <string name="more_txt_2">侵权举报</string>
    <string name="noise_no">暂无</string>
    <string name="noise_no_more">暂无更多白噪音资源</string>
    <string name="noise">白噪音</string>
    <string name="call_up">后唤醒你</string>
    <string name="clock_success">闹铃设置成功</string>
    <string name="write_setting">请授予高级权限</string>
    <string name="on_stop">长按结束</string>
    <string name="raw_no">暂无铃声可选择</string>
    <string name="time_long">时长：</string>
    <string name="time_min">分钟</string>
    <string name="yue">月</string>
    <string name="ri">日</string>
    <string name="use_ing">已使用</string>

    <string-array name="camer_item">
        <item>从相册选择</item>
        <item>拍一张</item>
    </string-array>
    <string name="ensure">"确 定"</string>
    <string name="cancel">"取 消"</string>

</resources>