<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_deream_13"
            android:textSize="@dimen/textsize14"
            android:layout_marginLeft="4dp"
            android:layout_centerVertical="true"
            android:textColor="@color/radio_txt_cocle"/>

        <TextView
            android:id="@+id/tx_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_deream_14"
            android:paddingBottom="6dp"
            android:textSize="@dimen/textsize14"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/get_code_cocle_un"/>

    </RelativeLayout>



    <HorizontalScrollView
        android:id="@+id/hsv_hos"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:fadingEdge="horizontal"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>
        </RelativeLayout>

    </HorizontalScrollView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_deream_15"
            android:textSize="@dimen/textsize14"
            android:layout_centerVertical="true"
            android:textColor="@color/radio_txt_cocle"/>

        <LinearLayout
            android:id="@+id/lin_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:padding="2dp"
                android:src="@mipmap/refresh_data"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_deream_16"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize14"
                android:textColor="@color/get_code_cocle_un"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>