<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:src="@mipmap/back_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/pwd_reset"
            android:textSize="@dimen/textsize16"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwd_reset_num"
            android:textColor="@color/get_code_cocle"
            android:textSize="@dimen/textsize14"/>

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/pwd_set_bg"
            android:layout_marginTop="20dp"
            android:cursorVisible="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_login"
            android:inputType="phone"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/code_cocle"
            android:textColorHint="#969696"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/textsize18" />

        <TextView
            android:id="@+id/tx_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="下一步"
            android:textSize="@dimen/textsize16"
            android:textColor="@color/white"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:layout_marginTop="40dp"/>

    </LinearLayout>

</LinearLayout>