<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sleep_time_bg"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_deream_18"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize16"/>

            <TextView
                android:id="@+id/tx_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_msg"
                android:layout_marginRight="5dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="4dp"
                android:textColor="@color/app_color"
                android:textSize="@dimen/textsize14"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.example.myapplication.custom.ScrollPickerView
                android:id="@+id/datepicker_close"
                android:layout_width="90dp"
                android:layout_height="190dp"
                android:layout_centerInParent="true"
                app:scrollpicker_gravity="center"
                app:scrollpicker_spacing="2dp"
                app:scrollpicker_textColor_center="@color/white"
                app:scrollpicker_textColor_outside="@color/white_t"
                app:scrollpicker_textFormat="5"
                app:scrollpicker_textRatio="2.6"
                app:scrollpicker_textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_deream_19"
                android:textColor="#ffffffff"
                android:textSize="14sp"
                android:layout_toRightOf="@+id/datepicker_close"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>